# oth-ai-montecarlo

./: .gitignore  README.md  build.js  index.js  package.json
lib/: montecarlo.cabal
lib/app/: Main.hs
lib/src/: Lib.hs  Oth.hs
